--- a/app.json
+++ b/app.json
@@ -1,1 +1,42 @@
-
+{
+  "name": "BlockVox by WokeyLeaks",
+  "description": "Block over 100 of Vox's Twitter accounts.",
+  "keywords": ["WokeyLeaks", "Vox", "block", "WokeyBot"],
+  "website": "https://blockvox.wokeyleaks.net",
+  "repository": "https://github.com/WokeyLeaks/blockvoxgit",
+  "logo": "https://avatars.githubusercontent.com/u/79455589",
+  "success_url": "/",
+  "stack": "heroku-18",
+  "env": {
+    "CONSUMER_KEY": {
+      "description": "Consumer Key from app registered at https://developer.twitter.com/apps/.",
+      "value": "",
+      "required": true
+    },
+    "CONSUMER_SECRET": {
+      "description": "Consumer Secret from app registered at https://developer.twitter.com/apps/.",
+      "value": "",
+      "required": true
+    },
+    "OAUTH_CALLBACK": {
+      "description": "Callback URL from app registered at https://developer.twitter.com/apps/. If site is hosted at https://example.herokuapp.com/ use https://example.herokuapp.com/callback.php.",
+      "value": "",
+      "required": true
+    },
+    "FORCE_TLS": {
+      "description": "Enable if you are running on a host with HTTPS.",
+      "value": "false",
+      "required": true
+    },
+    "HOST": {
+      "description": "The subdomain and domain the site is running on. E.g. example.com or example.herokuapp.com.",
+      "value": "",
+      "required": true
+    },
+    "DEBUG": {
+      "description": "Debug disables some things you only want running in production.",
+      "value": "false",
+      "required": true
+    }
+  }
+}
